--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "react": "15.4.2"
   },
   "devDependencies": {
+    "node-sass-chokidar": "0.0.3",
     "react-scripts": "1.0.0"
   },
   "scripts": {
+    "build-css": "node-sass-chokidar src/ -o src/",
+    "watch-css": "npm run build-css && node-sass-chokidar src/ -o src/ --watch --recursive",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
