--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "redux": "3.6.0",
     "react-redux": "5.0.6",
     "react-dom": "15.4.2",
-    "react": "15.4.2"
+    "react": "15.4.2",
+    "rest": "2.0.0"
   },
   "devDependencies": {
     "node-sass-chokidar": "0.0.3",
