--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "react-redux": "5.0.6",
     "react-dom": "15.4.2",
     "react": "15.4.2",
-    "rest": "2.0.0"
+    "rest": "2.0.0",
+    "redux-on-state-change": "1.0.0"
   },
   "devDependencies": {
     "node-sass-chokidar": "0.0.3",
