--- a/client/package.json
+++ b/client/package.json
@@ -3,21 +3,23 @@
   "description": null,
   "version": "0.0.67",
   "dependencies": {
-    "storm-react-diagrams": "3.1.2",
-    "redux": "3.6.0",
-    "react-redux": "5.0.6",
-    "react-dom": "15.4.2",
+    "file-saver": "^1.3.8",
     "react": "15.4.2",
+    "react-dom": "15.4.2",
+    "react-redux": "5.0.6",
+    "redux": "3.6.0",
+    "redux-actions": "^2.4.0",
+    "redux-on-state-change": "1.0.0",
     "rest": "2.0.0",
-    "redux-on-state-change": "1.0.0"
+    "storm-react-diagrams": "3.1.2"
   },
   "devDependencies": {
-    "node-sass-chokidar": "0.0.3",
+    "node-sass-chokidar": "1.3.0",
     "react-scripts": "1.0.0"
   },
   "scripts": {
     "build-css": "node-sass-chokidar src/ -o src/",
-    "watch-css": "npm run build-css && node-sass-chokidar src/ -o src/ --watch --recursive",
+    "watch-css": "node-sass-chokidar src/ -o src/ --watch",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
