--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.67",
   "dependencies": {
     "file-saver": "^1.3.8",
+    "promise-file-reader": "^1.0.2",
     "react": "15.4.2",
     "react-dom": "15.4.2",
     "react-redux": "5.0.6",
